--- a/style.css
+++ b/style.css
@@ -10,12 +10,51 @@ html {
     text-transform: capitalize;
   }
 
+  body{
+    background: rgb(0, 0, 0);
+  }
   h1 {
-    text-align: center;
+    font-size: 3.2em;
+    line-height: 1.1;
+    background: rgb(176, 200, 252);
+    padding: 10px;
+    border: 1px solid rgb(176, 200, 252);
+    color: rgb(255, 255, 255);
+    box-shadow: 1px 2px 2px 1px gray;
+    border-radius: 2px;
+    width: 45%;
+    margin: auto;
+    margin-bottom: 15px;
   }
 
 .searchSection {
     display: flex;
     justify-content: center;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-bottom: 15px;
+}
+
+article {
+  border: 5px solid rgb(250, 250, 250);
+  box-shadow: 1px 2px 2px 1px gray;
+  border-radius: 2px;
+  margin: 10px;
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+}
+
+img {
+  width: 75%;
+  margin: auto;
+}
+
+h2, p, span {
+  color: white
 }
   
